# tdx-tools

./: .gitignore  .gitmodules  README.md  start-qemu.sh
.github/workflows/: .aspell.en.pws  pr-fde.yml  pr-ubuntu-22.04-ovmf.yml
attestation/full-disk-encryption/: Cargo.toml  Makefile  README.md  build.rs  deny.toml
attestation/full-disk-encryption/src/: amber.rs  disk.rs  event_logs.rs  key_broker.rs  main.rs  ovmf_var.rs  quote.rs  td_report.rs  verifier.rs
attestation/full-disk-encryption/tools/image/: enroll-vars.py  fde-image.sh  tdx_guest_encrypted.sh
attestation/full-disk-encryption/tools/image/scripts/: install  partition
attestation/full-disk-encryption/tools/initramfs/hooks/: fde-agent
attestation/full-disk-encryption/tools/initramfs/scripts/init-premount/: fde-agent
attestation/pytdxmeasure/pytdxmeasure/: tdreport.py  utility.py
doc/: full-disk-encryption.md  full_disk_encryption.md
utils/ek-tool/: Cargo.toml  Makefile  Readme.md
utils/ek-tool/Lib/: Lib.cpp
utils/ek-tool/local/: build.sh
utils/ek-tool/src/: cert.rs  main.rs  quote.rs  tpm2_tools.rs  tpm_quote.rs  utils.rs
utils/pycloudstack/pycloudstack/: vmm.py  vmparam.py
