[package]
name = "ek-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["cargo"] }
anyhow = "1.0"
ring = "0.17"
base64 = "0.21.4"
x509-parser = {version = "0.15.1", features = ["verify"]}

intel-tee-quote-verification-rs = "0.2"
intel-tee-quote-verification-sys = "0.2"


[features]
DEBUG = []